syntax = "proto3";
package example2;

enum Status {
  SUCCESS = 0;
  FAIL = 1;
  UNKNOWN = 2;
}

message GetExampleDataReq {
  int32 id_get = 1;
  string name_get = 2;
}

message GetExampleDataRsp {
  repeated Status status_get = 1;
  optional string msg_get = 2;
  int32 code_get = 3;
}

message PostExampleDataReq {
  int32 id_post = 1;
  string name_post = 2;
}

message PostExampleDataRsp {
  repeated Status status_post = 1;
  optional string msg_post = 2;
  int32 code_post = 3;
}

service API {
  rpc getExampleData (GetExampleDataReq) returns (GetExampleDataRsp);
  rpc postExampleData (PostExampleDataReq) returns (PostExampleDataRsp);
}
